Skip to content

gui/qt: multiline metadata not handled correctly

Given that the enhancement referred to by #17494 (closed) has now been fixed, it exposes a flaw in how metadata is displayed in the qt-interface.

multiline_metadata_qt

As can be seen above, the metadata shows up correctly, but the user is unable to scroll within the tab that shows the extra metadata because the entire contents does not fit on one line (and should not be rendered as such either), plus it filling up the entire window.

Edited by Filip Roséen
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information