gui/qt: update look and feel related to extra metadata

These changes allow for several cosmetic/functional advantages, such
as:

 - automatically expand right-most column to fill entire width
 - automatically expand rows to the contents within them
 - scroll the table by pixel instead of by row
 - remove edit triggers (as these do not have any meaning currently)

fixes #17656

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>